--- a/index.html
+++ b/index.html
@@ -2,20 +2,23 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Messenger</title>
+  <title>Messenger Troll</title>
   <style>
     body {
       margin: 0;
-      background-color: #ffe6f0; /* Nền hồng nhẹ */
+      background-color: #ffe6f0;
       font-family: Arial, sans-serif;
       text-align: center;
       color: #d6336c;
       overflow: hidden;
       height: 100vh;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
 
     h1 {
-      margin-top: 40px;
       font-size: 26px;
       font-weight: bold;
     }
@@ -27,45 +30,42 @@
       font-size: 16px;
     }
 
-    .cat {
-      width: 250px;
-      margin: 20px auto;
-      display: block;
-    }
-
     .buttons {
-      margin-top: 20px;
+      margin-top: 30px;
       position: relative;
-      height: 100px;
+      height: 120px;
+      width: 100%;
     }
 
     button {
       padding: 10px 20px;
-      margin: 10px;
       border: none;
       border-radius: 12px;
       font-size: 16px;
       cursor: pointer;
       transition: 0.3s;
-    }
-
-    #noBtn {
-      background-color: #f44336;
-      color: white;
       position: absolute;
     }
 
     #yesBtn {
+      background-color: #f44336;
+      color: white;
+    }
+
+    #noBtn {
       background-color: white;
       color: #f44336;
       border: 2px solid #f44336;
-    }
-
-    #noBtn:hover {
-      background-color: #d32f2f;
+      left: 50%;
+      transform: translateX(-50%);
+      top: 70px;
     }
 
     #yesBtn:hover {
+      background-color: #d32f2f;
+    }
+
+    #noBtn:hover {
       background-color: #f44336;
       color: white;
     }
@@ -75,27 +75,26 @@
   <h1>Ngoài anh ra em còn ai khác khônggg?</h1>
   <p>Em mà không chọn mà thoát ra thì đừng nhìn mặt anh nữa 😌</p>
 
-  <!-- Ảnh mèo xanh cute -->
-  <img class="cat" src="https://i.imgur.com/JvPeq2c.png" alt="cute cat" />
-
   <div class="buttons">
-    <button id="noBtn">Có nhiều lắm</button>
-    <button id="yesBtn" onclick="alert('Yêu anh nhiều lắm luôn á 😘')">Chỉ có anh</button>
+    <!-- Nút troll: chạy khi hover -->
+    <button id="yesBtn">Chỉ có anh</button>
+    
+    <!-- Nút bình thường -->
+    <button id="noBtn" onclick="alert('OK linh??? 😢')">Có nhiều lắm</button>
   </div>
 
   <script>
-    const noBtn = document.getElementById('noBtn');
+    const yesBtn = document.getElementById('yesBtn');
 
-    // Giới hạn vị trí chạy trong khung (không văng ra ngoài)
-    noBtn.addEventListener('mouseover', () => {
-      const maxX = window.innerWidth - noBtn.offsetWidth - 20;
-      const maxY = window.innerHeight - noBtn.offsetHeight - 20;
+    yesBtn.addEventListener('mouseover', () => {
+      const maxX = window.innerWidth - yesBtn.offsetWidth - 20;
+      const maxY = window.innerHeight - yesBtn.offsetHeight - 20;
 
       const randX = Math.floor(Math.random() * maxX);
       const randY = Math.floor(Math.random() * maxY);
 
-      noBtn.style.left = `${randX}px`;
-      noBtn.style.top = `${randY}px`;
+      yesBtn.style.left = `${randX}px`;
+      yesBtn.style.top = `${randY}px`;
     });
   </script>
 </body>
