--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <button id="yesBtn">Chỉ có anh</button>
     
     <!-- Nút bình thường -->
-    <button id="noBtn" onclick="alert('OK linh??? 😢')">Có nhiều lắm</button>
+    <button id="noBtn" onclick="alert('OK linh chos')">Có nhiều lắm</button>
   </div>
 
   <script>
