--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <title>Messenger Troll</title>
+  <title>linh ngu</title>
   <style>
     body {
       margin: 0;
@@ -50,6 +50,9 @@
     #yesBtn {
       background-color: #f44336;
       color: white;
+      left: 50%;
+      top: 30px;
+      transform: translateX(-50%);
     }
 
     #noBtn {
@@ -57,8 +60,8 @@
       color: #f44336;
       border: 2px solid #f44336;
       left: 50%;
+      top: 80px;
       transform: translateX(-50%);
-      top: 70px;
     }
 
     #yesBtn:hover {
@@ -76,25 +79,36 @@
   <p>Em mà không chọn mà thoát ra thì đừng nhìn mặt anh nữa 😌</p>
 
   <div class="buttons">
-    <!-- Nút troll: chạy khi hover -->
     <button id="yesBtn">Chỉ có anh</button>
-    
-    <!-- Nút bình thường -->
-    <button id="noBtn" onclick="alert('OK linh chos')">Có nhiều lắm</button>
+    <button id="noBtn" onclick="alert('linh??? ')">Có nhiều lắm</button>
   </div>
 
   <script>
     const yesBtn = document.getElementById('yesBtn');
+    let posX = window.innerWidth / 2;
+    let posY = 30;
 
     yesBtn.addEventListener('mouseover', () => {
-      const maxX = window.innerWidth - yesBtn.offsetWidth - 20;
-      const maxY = window.innerHeight - yesBtn.offsetHeight - 20;
+      // Tạo khoảng cách di chuyển nhỏ (troll nhẹ nhàng)
+      const step = 80;
+      const offsetX = (Math.random() > 0.5 ? 1 : -1) * step;
+      const offsetY = (Math.random() > 0.5 ? 1 : -1) * step;
 
-      const randX = Math.floor(Math.random() * maxX);
-      const randY = Math.floor(Math.random() * maxY);
+      // Tính vị trí mới
+      posX += offsetX;
+      posY += offsetY;
 
-      yesBtn.style.left = `${randX}px`;
-      yesBtn.style.top = `${randY}px`;
+      // Giữ trong giới hạn màn hình
+      const maxX = window.innerWidth - yesBtn.offsetWidth - 10;
+      const maxY = window.innerHeight - yesBtn.offsetHeight - 10;
+
+      posX = Math.max(10, Math.min(posX, maxX));
+      posY = Math.max(10, Math.min(posY, maxY));
+
+      // Cập nhật vị trí nút
+      yesBtn.style.left = `${posX}px`;
+      yesBtn.style.top = `${posY}px`;
+      yesBtn.style.transform = 'translateX(0)';
     });
   </script>
 </body>
