--- a/index.html
+++ b/index.html
@@ -101,17 +101,17 @@
   </style>
 </head>
 <body>
-  <h1>Ngoài anh ra em còn ai khác khônggg?</h1>
+  <h1>mlinh có phải là chos khônggg?</h1>
   <p>Em mà không chọn mà thoát ra thì đừng nhìn mặt anh nữa 😌</p>
 
   <div class="buttons">
-    <button id="yesBtn">Chỉ có anh</button>
-    <button id="noBtn" onclick="showPopup()">Có nhiều lắm</button>
+    <button id="yesBtn">không phải!!</button>
+    <button id="noBtn" onclick="showPopup()">đúng ạ</button>
   </div>
 
   <!-- Custom popup -->
   <div id="popup">
-    <strong></strong> ok hiểu  rồi!</strong><br>
+    <strong></strong> kew lew  đồ chos!</strong><br>
     <button onclick="closePopup()">Đóng</button>
   </div>
 
