--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
   <!-- Custom popup -->
   <div id="popup">
-    <strong></strong> kew lew  đồ chos!</strong><br>
+    <strong></strong> lew lew  đồ chos!</strong><br>
     <button onclick="closePopup()">Đóng</button>
   </div>
 
